--- a/EdgeProjectPe.Api/appsettings.json
+++ b/EdgeProjectPe.Api/appsettings.json
@@ -12,7 +12,7 @@
     "Key": "20f0b66b4b444c04a92fc1d4c23eab9a"
   },
   "ConnectionStrings": {
-    "EdgeDB": "server=edgeprojectserver.mysql.database.azure.com;user id=adminedgeproject;password=_T6xMRs!;database=facturadb"
+    "EdgeDB": "server=;user id=;password=;database=facturadb"
   }
 }
 
